snapshot-tests/tests/snapshots/parser__bad_strings__hex.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidHexEscape]: invalid hex escape character in string: `x` at foo
  ┌─ hex:1:10
  │
1 │ foo = "\uxx"
  │          ^ invalid hex escape 'x'
